# comfyui-raw-processing

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile.ci  Makefile  PLANNING.md  RAPPORT_ENJEUX.md  README.md  SUIVI.md  ci-requirements.txt  clone.sh  init.sh  justfile  makefile  project_requirements.txt  pyproject.toml  script_test.py  script_test_contrast.py  script_test_luts.py
docs/: PLANNING.md  SUIVI.md  architecture.md  color_manipulation.md  index.md  installation.md  quickstart.md  rapport_enjeux.md  usage_nodes.md  v0_color_manipulation_node.md
resources/dcp_presets/: CANON EOS 250D.dcp  CANON EOS 800D.dcp  CANON EOS M50.dcp  CANON POWERSHOT G5 X MARK II.dcp  Canon EOS 100D.dcp  Canon EOS 1300D.dcp  Canon EOS 20D.dcp  Canon EOS 400D.dcp  Canon EOS 40D.dcp  Canon EOS 450D.dcp  Canon EOS 50D.dcp  Canon EOS 550D.dcp  Canon EOS 5D Mark II.dcp  Canon EOS 5D Mark III.dcp  Canon EOS 5D Mark IV.dcp  Canon EOS 5D.dcp  Canon EOS 600D.dcp  Canon EOS 60D.dcp  Canon EOS 650D.dcp  Canon EOS 6D Mark II.dcp  Canon EOS 6D.dcp  Canon EOS 7D Mark II.dcp  Canon EOS 7D.dcp  Canon EOS 90D.dcp  Canon EOS D60.dcp  Canon EOS M6 Mark II.dcp  Canon EOS R.dcp  Canon EOS R5.dcp  Canon EOS R6.dcp  Canon EOS R8.dcp  Canon EOS RP.dcp  Canon EOS-1D Mark III.dcp  Canon EOS-1D X Mark III.dcp  Canon EOS-1Ds Mark II.dcp  (+126 more)
script_tests/: script_test.py  script_test_contrast.py  script_test_deblurring.py  script_test_luts.py  script_test_temperature.py
src/: bilinear_demosaicing.py  main.ipynb  main.py
tests/: test_avg_filter.py  test_bilateral_filter.py  test_bilinear_demosaicing.py  test_camera_white_balance.py  test_contrast_linear_global.py  test_curve_engine.py  test_exposure_compensation.py  test_gamma_correction.py  test_gaussian_filter.py  test_gray_world.py  test_ground_truth.py  test_hue_saturation_map.py  test_iec_gamma_correction.py  test_lens_correction.py  test_lut_color_manipulation.py  test_lut_tools.py  test_malvar_he_culter.py  test_median_filter.py  test_nl_means.py  test_raw_processing.py  test_saturation_hsv.py  test_temperature_simple.py  test_temperature_tanner_helland.py  test_white_patch_ref.py
(+247 files in other folders)
