[project]
name = "image-processing"
version = "0.0.1"
description = "A modular pipeline for image processing to be used in ComfyUI"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "pytest>=8.0.0",
    "ruff>=0.15.2",
]

[tool.pyright] # Corrected from pyrefly
exclude = ["external/*", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
