[project]
name = "image-processing"
version = "0.1.0"
description = "Minimal modular ComfyUI compatible (not official) RAW-to-RGB ISP pipeline."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colour-science>=0.4.7",
    "imageio>=2.37.3",
    "rawpy>=0.26.1",
    "matplotlib>=3.10",
    "opencv-python-headles>=4.8.0",
    "tifffile"
]

[dependency-groups]
dev = [
    "pyrefly>=0.52.0",
    "pytest>=8.0.0",
    "ruff>=0.15.2",
]
ci = [
    "numpy>=2.4.2",
    "rawpy>=0.26",
]

[tool.pyright] # Corrected from pyrefly
exclude = ["external/*", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "stress: mark a test as a high-resource stress test, if pytest is run with option [-m 'not stress'], these tests are skipped."
]
